Moved argument types to the `///.command.argument` package